--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "contrast" # "dark", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "mint" # "dark", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -21,12 +21,12 @@ title_separator          : "-"
 subtitle                 : "" # site tagline that appears below site title in masthead
 name                     : " "
 description              : "Azure Spring Cloud Support Blog"
-url                      : "https://azureossd.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://gkgaurav31.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "azureossd/azureossd.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "gkgaurav31/azureossd.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "assets/images/icon.png" #"assets/images/azurelogo.svg" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "assets/images/App-Services.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : "Azure OSS Developer Support"# overrides the website title displayed in the masthead, use " " for no title
+logo                     : "assets/images/azure-spring-cloud-logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+masthead_title           : "Azure Spring Cloud Support"# overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 150
 comments:
@@ -91,7 +91,7 @@ facebook:
   username               :
   app_id                 :
   publisher              :
-og_image                 : "assets/images/App-Services.png" # Open Graph/Twitter default site image
+og_image                 : "assets/images/azure-spring-cloud-logo.png" # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
@@ -139,7 +139,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/azureossd"
+      url: "https://github.com/gkgaurav31"
       # - label: "GitLab"
       #   icon: "fab fa-fw fa-gitlab"
       # url:
