--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
     url: /categories/
   - title: "Topics"
     url: /tags/
-  - title: "App Service Docs"
-    url: https://docs.microsoft.com/en-us/azure/app-service/
+  - title: "Azure Spring Cloud Docs"
+    url: https://docs.microsoft.com/en-us/azure/spring-cloud/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
@@ -19,14 +19,16 @@ main:
 links:
   - title: Azure Resources
     children:
-      - title: "Linux Best Practices and FAQ"
-        url: https://github.com/Azure/app-service-linux-docs
-      - title: "Azure App Service on Linux FAQ"
-        url: https://docs.microsoft.com/en-us/azure/app-service/containers/app-service-linux-faq
-      - title: "Things You Should Know: Web Apps and Linux"
-        url: https://techcommunity.microsoft.com/t5/azure-app-service/things-you-should-know-web-apps-and-linux/ba-p/392472
-      - title: "Java on App Service"
-        url: https://github.com/Azure-Samples/java-on-app-service
+      - title: "Azure Spring Cloud Reference Architecture"
+        url: https://devblogs.microsoft.com/java/deploy-spring-boot-applications-by-leveraging-enterprise-best-practices/
+      - title: "Azure Spring Cloud Training"
+        url: https://github.com/microsoft/azure-spring-cloud-training
+      - title: "Troubleshoot common issues"
+        url: https://docs.microsoft.com/en-us/azure/spring-cloud/troubleshoot
+      - title: "How-To Guides"
+        url: https://docs.microsoft.com/en-us/azure/spring-cloud/how-to-prepare-app-deployment?pivots=programming-language-java
+      - title: "Deploy Azure Spring Cloud in a Virtual Network"
+        url: https://docs.microsoft.com/en-us/azure/spring-cloud/how-to-deploy-in-azure-virtual-network
   - title: Other Blogs
     children:
       - title: "Azure Blog"
@@ -39,11 +41,3 @@ links:
     children:
       - title: "Java LTS for Azure"
         url: https://docs.microsoft.com/en-us/java/azure/jdk/?view=azure-java-stable
-      - title: "Azure Spring Cloud"
-        url: https://docs.microsoft.com/en-us/java/azure/jdk/?view=azure-java-stable
-      - title: "Nodejs"
-        url: https://nodejs.org/
-      - title: "PHP"
-        url: https://www.php.net/
-      - title: "Python"
-        url: https://www.python.org/
