--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ subtitle                 : "" # site tagline that appears below site title in ma
 name                     : " "
 description              : "Azure Spring Cloud Support Blog"
 url                      : "https://gkgaurav31.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/azurespringcloud" # the subpath of your site, e.g. "/blog"
 repository               : "gkgaurav31/azurespringcloud" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "assets/images/icon.png" #"assets/images/azurelogo.svg" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "assets/images/azure-spring-cloud-logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
