--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 search                   : true # true, false (default)
 search_full_content      : true # true, false (default)
-search_provider          : "algolia" # lunr (default), algolia, google
+search_provider          : "google" # lunr (default), algolia, google
 google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
